@@ -1100,6 +1100,12 @@ unsigned char sys_float_spin[] = {
   0x67, 0x66, 0x2e, 0x63, 0x22, 0x20, 0x5f, 0x5f, 0x62, 0x75, 0x69, 0x6c,
   0x74, 0x69, 0x6e, 0x5f, 0x6c, 0x6f, 0x67, 0x66, 0x28, 0x78, 0x20, 0x3d,
   0x20, 0x66, 0x6c, 0x6f, 0x61, 0x74, 0x29, 0x20, 0x3a, 0x20, 0x72, 0x3d,
-  0x66, 0x6c, 0x6f, 0x61, 0x74, 0x0a, 0x00
+  0x66, 0x6c, 0x6f, 0x61, 0x74, 0x0a, 0x70, 0x72, 0x69, 0x20, 0x66, 0x69,
+  0x6c, 0x65, 0x20, 0x22, 0x6c, 0x69, 0x62, 0x73, 0x79, 0x73, 0x2f, 0x65,
+  0x5f, 0x70, 0x6f, 0x77, 0x66, 0x2e, 0x63, 0x22, 0x20, 0x5f, 0x5f, 0x62,
+  0x75, 0x69, 0x6c, 0x74, 0x69, 0x6e, 0x5f, 0x70, 0x6f, 0x77, 0x66, 0x28,
+  0x78, 0x20, 0x3d, 0x20, 0x66, 0x6c, 0x6f, 0x61, 0x74, 0x2c, 0x20, 0x79,
+  0x20, 0x3d, 0x20, 0x66, 0x6c, 0x6f, 0x61, 0x74, 0x29, 0x20, 0x3a, 0x20,
+  0x72, 0x3d, 0x66, 0x6c, 0x6f, 0x61, 0x74, 0x0a, 0x00
 };
-unsigned int sys_float_spin_len = 13218;
+unsigned int sys_float_spin_len = 13292;
