@@ -11,6 +11,7 @@ Version 4.1.0
 - Start Spin file compilation in CON mode
 - Fixed a type promotion problem with bitwise operators in C
 - Added [] pointer dereference operator for FreeBasic compatibility.
+- Added exponentiation operator ^ to BASIC
 
 Version 4.0.6
 - Allow "static" and "const" or "volatile" to come in any order in C code
